<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlack"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="15dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="399dp"
        android:layout_height="218dp"
        android:alpha="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/process"
        app:layout_constraintVertical_bias="0.913"
        app:srcCompat="@drawable/clg_students" />

    <TextView
        android:id="@+id/remainingHours"
        android:layout_width="180dp"
        android:layout_height="28dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/alegreya"
        android:gravity="center"
        android:text="@string/remainingHours"
        android:textColor="@color/grey"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.753"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/remaining"
        android:layout_width="40dp"
        android:layout_height="28dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:fontFamily="@font/alata"
        android:gravity="center"
        android:text="@string/hourValue"
        android:textColor="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/remainingHours"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fileName"
        android:layout_width="250dp"
        android:layout_height="28dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/alegreya"
        android:gravity="center"
        android:text="@string/numberOfHours"
        android:textColor="@color/grey"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/className"
        android:layout_width="80dp"
        android:layout_height="28dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:fontFamily="@font/alata"
        android:gravity="center"
        android:hint="@string/noOfHrs"
        android:inputType="number"
        android:singleLine="false"
        android:textColor="@color/black"
        android:textColorHint="@color/lightOrange"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/fileName"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/lecture"
        android:layout_width="250dp"
        android:layout_height="28dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/alegreya"
        android:text="@string/lecture"
        android:textColor="@color/grey"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fileName" />

    <EditText
        android:id="@+id/lectureHours"
        android:layout_width="80dp"
        android:layout_height="28dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:fontFamily="@font/alata"
        android:gravity="center"
        android:hint="@string/lectureHrs"
        android:inputType="number"
        android:singleLine="false"
        android:textColor="@color/black"
        android:textColorHint="@color/lightOrange"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/lecture"
        app:layout_constraintTop_toBottomOf="@+id/className" />

    <TextView
        android:id="@+id/parallelLecture"
        android:layout_width="240dp"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/alegreya"
        android:gravity="center"
        android:text="@string/parallelLecture"
        android:textColor="@color/grey"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lecture" />

    <EditText
        android:id="@+id/parallelLectureHours"
        android:layout_width="80dp"
        android:layout_height="28dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:fontFamily="@font/alata"
        android:gravity="center"
        android:hint="@string/parallelLectureHrs"
        android:inputType="number"
        android:singleLine="false"
        android:textColor="@color/black"
        android:textColorHint="@color/lightOrange"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/parallelLecture"
        app:layout_constraintTop_toBottomOf="@+id/lectureHours" />

    <TextView
        android:id="@+id/lab"
        android:layout_width="250dp"
        android:layout_height="28dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/alegreya"
        android:text="@string/lab"
        android:textColor="@color/grey"

        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parallelLecture" />

    <EditText
        android:id="@+id/labHours"
        android:layout_width="80dp"
        android:layout_height="28dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:fontFamily="@font/alata"
        android:gravity="center"
        android:hint="@string/labHrs"
        android:inputType="number"
        android:singleLine="false"
        android:textColor="@color/black"
        android:textColorHint="@color/lightOrange"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/lab"
        app:layout_constraintTop_toBottomOf="@+id/parallelLectureHours" />

    <TextView
        android:id="@+id/parallelLab"
        android:layout_width="250dp"
        android:layout_height="28dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/alegreya"
        android:text="@string/parallelLab"
        android:textColor="@color/grey"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lab" />

    <EditText
        android:id="@+id/parallelLabHours"
        android:layout_width="80dp"
        android:layout_height="28dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:fontFamily="@font/alata"
        android:gravity="center"
        android:hint="@string/labHrs"
        android:inputType="number"
        android:singleLine="false"
        android:textColor="@color/black"
        android:textColorHint="@color/lightOrange"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.822"
        app:layout_constraintStart_toEndOf="@+id/parallelLab"
        app:layout_constraintTop_toBottomOf="@+id/labHours" />

    <Button
        android:id="@+id/process"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/darkGreen"
        android:text="Process"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parallelLab" />


</androidx.constraintlayout.widget.ConstraintLayout>